OpenAI_Gym_Cartpole_deepRL: ensure reward is float32 (no behavioural change)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -366,7 +366,7 @@
     "        \"\"\"\n",
     "        # action is tensor -> item delivers value of tensor as python number\n",
     "        self.state, reward, self.done, _ = self.env.step(action.item())\n",
-    "        return torch.tensor([reward], device=self.torchdevice)\n",
+    "        return torch.tensor([np.float32(reward)], device=self.torchdevice)\n",
     "\n",
     "    def get_state(self):\n",
     "        if self.state is None or self.done:\n",
