OpenAI_Gym_Cartpole_deepRL: generalize: use returned reward as reward (instead of duration) (no behavioural change)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -430,7 +430,7 @@
     "    plt.clf()\n",
     "    plt.title('Training ...')\n",
     "    plt.xlabel('Episode')\n",
-    "    plt.ylabel('Duration')\n",
+    "    plt.ylabel('Reward')\n",
     "    plt.plot(values)\n",
     "    \n",
     "    moving_avg = get_moving_average(values, moving_avg_period)\n",
@@ -443,8 +443,8 @@
     "def plot_results(values, moving_avg_period):\n",
     "    episode_best = np.argmax(moving_avg_period)\n",
     "    moving_avg_best = np.max(moving_avg_period)\n",
-    "    print(\"best episode: \" + str(episode_best) + \" with duration \" + str(moving_avg_best))\n",
-    "    plot(episode_durations, 100)\n",
+    "    print(\"best episode: \" + str(episode_best) + \" with reward \" + str(moving_avg_best))\n",
+    "    plot(moving_avg_period, 100)\n",
     "        \n",
     "def get_moving_average(values, period):\n",
     "    values = torch.tensor(values, dtype=torch.float)\n",
@@ -553,7 +553,7 @@
     "    :filename: filename\n",
     "    :stat_update: plot statistics after every stat_update episodes (default 100)\n",
     "    :policy_net: optional existing model to train\n",
-    "    :return: (best found policy network, episode duration times)\n",
+    "    :return: (best found policy network, episode rewards)\n",
     "    \"\"\"\n",
     "        \n",
     "    # setup env and agent\n",
@@ -589,8 +589,8 @@
     "    policy_net_best = policy_net.clone(torchdevice)\n",
     "    policy_net_best.eval() # only inference    \n",
     "    \n",
-    "    # track episode durations\n",
-    "    episode_durations = []\n",
+    "    # track episode rewards\n",
+    "    episode_rewards = []\n",
     "    \n",
     "    # start training\n",
     "    print(\"0: \", end='')\n",
@@ -601,16 +601,15 @@
     "        em.reset()\n",
     "        \n",
     "        state = em.get_state()\n",
+    "        reward_sum = 0\n",
     "        for timestep in count():\n",
     "            \n",
     "            # make a move\n",
     "            action = agent.select_action(state, policy_net)\n",
     "            reward = em.take_action(action)\n",
+    "            reward_sum += reward\n",
     "            next_state = em.get_state()\n",
-    "            #memory.push(Experience(state, action, next_state, reward))\n",
-    "            # give infinite reward, if we play over 500 iterations\n",
-    "            memory.push(Experience(\n",
-    "                state, action, next_state, torch.tensor([1.0], device=torchdevice)))\n",
+    "            memory.push(Experience(state, action, next_state, reward))\n",
     "\n",
     "            state = next_state\n",
     "\n",
@@ -638,13 +637,13 @@
     "            # end of episode?\n",
     "            if em.done or timestep >= hpara.max_timestep:\n",
     "                # statistics\n",
-    "                episode_durations.append(timestep)\n",
+    "                episode_rewards.append(reward_sum)\n",
     "\n",
     "                # save best model found so far\n",
     "                moving_avg = get_moving_average(episode_durations, 100)[-1]\n",
     "                if moving_avg > moving_avg_best:\n",
     "                    print(\"\\nsave best episode: \" + str(episode_best) +\n",
-    "                          \" with duration \" + str(moving_avg_best));\n",
+    "                          \" with reward \" + str(moving_avg_best));\n",
     "                    if is_ipython: display.clear_output(wait=True)\n",
     "                    moving_avg_best = moving_avg\n",
     "                    episode_best = episode\n",
@@ -657,7 +656,7 @@
     "                # output statistics\n",
     "                if episode % stat_update == 0:\n",
     "                    print('\\nepisode: ' + str(episode))\n",
-    "                    plot(episode_durations, 100)\n",
+    "                    plot(episode_rewards, 100)\n",
     "                    print(str(episode) + \": \", end='')\n",
     "\n",
     "                break\n",
@@ -666,7 +665,7 @@
     "\n",
     "    # return best policy and statistics\n",
     "    policy_net_best.eval() # only inference    \n",
-    "    return (policy_net_best, episode_durations)"
+    "    return (policy_net_best, episode_rewards)"
    ]
   },
   {
@@ -684,7 +683,7 @@
     "    :policy_net: policy network to use\n",
     "    :num_episodes: number of episodes to play (default 1)\n",
     "    :max_timestep: maximum timesteps to play (default 1000)\n",
-    "    :return: episode duration times\n",
+    "    :return: episode rewards\n",
     "    \"\"\"\n",
     "        \n",
     "    # setup env and agent\n",
@@ -693,8 +692,8 @@
     "                  ExploitationStrategy(),\n",
     "                  em.n_actions())\n",
     "\n",
-    "    # track episode durations\n",
-    "    episode_durations = []\n",
+    "    # track episode rewards\n",
+    "    episode_rewards = []\n",
     "\n",
     "    for episode in range(num_episodes):\n",
     "\n",
@@ -705,6 +704,7 @@
     "\n",
     "        # play\n",
     "        state = em.get_state()\n",
+    "        reward_sum = 0\n",
     "        for timestep in count():\n",
     "\n",
     "            # render output\n",
@@ -712,17 +712,17 @@
     "\n",
     "            # make a move\n",
     "            action = agent.select_action(state, policy_net)\n",
-    "            em.take_action(action)\n",
+    "            reward_sum += em.take_action(action)\n",
     "            state = em.get_state()\n",
     "\n",
     "            # end of episode?\n",
     "            if em.done or timestep >= max_timestep:\n",
-    "                episode_durations.append(timestep)\n",
-    "                plot(episode_durations, 100)\n",
+    "                episode_rewards.append(reward_sum)\n",
+    "                plot(episode_rewards, 100)\n",
     "                break\n",
     "        \n",
     "    em.close()\n",
-    "    return episode_durations"
+    "    return episode_rewards"
    ]
   },
   {
@@ -781,10 +781,10 @@
    ],
    "source": [
     "# if model could not be loaded -> train & save\n",
-    "episode_durations = None\n",
+    "episode_rewards = None\n",
     "if policy_net is None:\n",
     "    para = HyperParameters()\n",
-    "    policy_net, episode_durations = train(torchdevice, para)\n",
+    "    policy_net, episode_rewards = train(torchdevice, para)\n",
     "    policy_net.save(modelfile)"
    ]
   },
@@ -824,8 +824,8 @@
    ],
    "source": [
     "# print results if net was trained\n",
-    "if episode_durations is not None:\n",
-    "    plot_results(100, episode_durations)"
+    "if episode_rewards is not None:\n",
+    "    plot_results(100, episode_rewards)"
    ]
   },
   {
@@ -864,7 +864,7 @@
    ],
    "source": [
     "# play\n",
-    "episode_durations = play(torchdevice, policy_net, 5, 1000)"
+    "episode_rewards = play(torchdevice, policy_net, 5, 1000)"
    ]
   },
   {
@@ -903,8 +903,8 @@
    ],
    "source": [
     "# print results of play\n",
-    "if episode_durations is not None:\n",
-    "    plot_results(100, episode_durations)"
+    "if episode_rewards is not None:\n",
+    "    plot_results(100, episode_rewards)"
    ]
   }
  ],
