OpenAI_Gym_Cartpole_deepRL: fixed plot_results parameters (no behavioural change)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -441,10 +441,10 @@
     "    if is_ipython: display.clear_output(wait=True)\n",
     "\n",
     "def plot_results(values, moving_avg_period):\n",
-    "    episode_best = np.argmax(moving_avg_period)\n",
-    "    moving_avg_best = np.max(moving_avg_period)\n",
+    "    episode_best = np.argmax(values)\n",
+    "    moving_avg_best = np.max(values)\n",
     "    print(\"best episode: \" + str(episode_best) + \" with reward \" + str(moving_avg_best))\n",
-    "    plot(moving_avg_period, 100)\n",
+    "    plot(values, moving_avg_period)\n",
     "        \n",
     "def get_moving_average(values, period):\n",
     "    values = torch.tensor(values, dtype=torch.float)\n",
@@ -825,7 +825,7 @@
    "source": [
     "# print results if net was trained\n",
     "if episode_rewards is not None:\n",
-    "    plot_results(100, episode_rewards)"
+    "    plot_results(episode_rewards, 100)"
    ]
   },
   {
@@ -904,7 +904,7 @@
    "source": [
     "# print results of play\n",
     "if episode_rewards is not None:\n",
-    "    plot_results(100, episode_rewards)"
+    "    plot_results(episode_rewards, 100)"
    ]
   }
  ],
