OpenAI_Gym_Cartpole_deepRL: minor comment cleanups (no behavioural change)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -555,7 +555,7 @@
     "    :torchdevice: torch.device(...)\n",
     "    :filename: filename\n",
     "    :stat_update: plot statistics after every stat_update episodes (default 100)\n",
-    "    :policy_net: optional existing model to train\n",
+    "    :policy_net: optional existing model to train (default None)\n",
     "    :return: (best found policy network, episode rewards)\n",
     "    \"\"\"\n",
     "        \n",
@@ -691,7 +691,7 @@
     "    :policy_net: policy network to use\n",
     "    :num_episodes: number of episodes to play (default 1)\n",
     "    :max_timestep: maximum timesteps to play (default 1000)\n",
-    "    :n_episodes_ravg: number of episodes used to calculate moving reward average (for plot) (Default 100)\n",
+    "    :n_episodes_ravg: number of episodes used to calculate moving reward average (for plot) (default 100)\n",
     "    :return: episode rewards\n",
     "    \"\"\"\n",
     "        \n",
