OpenAI_Gym_Cartpole_deepRL: generalize reward average (no behavioural change)
In general rewards can be negative -> use float("-inf") instead of 0 as bottom line

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -449,7 +449,7 @@
     "def get_moving_average(values, period):\n",
     "    values = torch.tensor(values, dtype=torch.float)\n",
     "    if len(values) < period:\n",
-    "        moving_avg = torch.zeros(len(values))\n",
+    "        moving_avg = torch.full((len(values), ), float('-inf'))\n",
     "        return moving_avg.numpy()\n",
     "    \n",
     "    # periode slice and mean\n",
@@ -587,7 +587,7 @@
     "    optimizer = optim.Adam(params=policy_net.parameters(), lr=hpara.lr)\n",
     "    \n",
     "    # track best episode\n",
-    "    moving_avg_best = 0\n",
+    "    moving_avg_best = float('-inf')\n",
     "    episode_best = 0\n",
     "    policy_net_best = policy_net.clone(torchdevice)\n",
     "    policy_net_best.eval() # only inference    \n",
