OpenAI_Gym_Cartpole_deepRL: generalization: moved enviroment in main program (no behavioural change)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -523,16 +523,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load(torchdevice, filename):\n",
+    "def load(torchdevice, em, filename):\n",
     "    \"\"\"\n",
     "    load a policy network from given file\n",
     "\n",
     "    :torchdevice: torch.device(...)\n",
+    "    :em: the environment the model was trained on\n",
     "    :filename: filename\n",
     "    :return: polcy network (None if file not found)\n",
     "    \"\"\"\n",
     "\n",
-    "    em = CartPoleEnvManager(torchdevice)\n",
     "    policy_net = DQN(\n",
     "        em.n_observations(),\n",
     "        em.n_actions()).to(torchdevice)\n",
@@ -548,19 +548,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(torchdevice, hpara, stat_update = 100, policy_net = None):\n",
+    "def train(torchdevice, em, hpara, stat_update = 100, policy_net = None):\n",
     "    \"\"\"\n",
     "    train a policy network with given parameters\n",
     "\n",
     "    :torchdevice: torch.device(...)\n",
+    "    :em: the environment to train on\n",
     "    :filename: filename\n",
     "    :stat_update: plot statistics after every stat_update episodes (default 100)\n",
     "    :policy_net: optional existing model to train (default None)\n",
     "    :return: (best found policy network, episode rewards)\n",
     "    \"\"\"\n",
     "        \n",
-    "    # setup env and agent\n",
-    "    em = CartPoleEnvManager(torchdevice)\n",
+    "    # setup agent\n",
     "    agent = Agent(\n",
     "        torchdevice,\n",
     "        EpsilonGreedyStrategy(\n",
@@ -680,7 +680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def play(torchdevice, policy_net,\n",
+    "def play(torchdevice, em, policy_net,\n",
     "         n_episodes_ravg = 100,\n",
     "         num_episodes = 1, \n",
     "         max_timestep = 1000):\n",
@@ -688,6 +688,7 @@
     "    play the game using a given policy network\n",
     "\n",
     "    :torchdevice: torch.device(...)\n",
+    "    :em: the environment to play on\n",
     "    :policy_net: policy network to use\n",
     "    :num_episodes: number of episodes to play (default 1)\n",
     "    :max_timestep: maximum timesteps to play (default 1000)\n",
@@ -695,8 +696,7 @@
     "    :return: episode rewards\n",
     "    \"\"\"\n",
     "        \n",
-    "    # setup env and agent\n",
-    "    em = CartPoleEnvManager(torchdevice)\n",
+    "    # setup agent\n",
     "    agent = Agent(torchdevice,\n",
     "                  ExploitationStrategy(),\n",
     "                  em.n_actions())\n",
@@ -770,8 +770,22 @@
     }
    ],
    "source": [
+    "# model file to load\n",
+    "modelfile=\"OpenAI_Gym_Cartpole_deepRL.model\"\n",
+    "\n",
+    "# the environment to train/play\n",
+    "em = CartPoleEnvManager(torchdevice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4171b261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# try loading model\n",
-    "policy_net = load(torchdevice, modelfile)"
+    "policy_net = load(torchdevice, em, modelfile)"
    ]
   },
   {
@@ -793,7 +807,7 @@
     "episode_rewards = None\n",
     "para = HyperParameters()\n",
     "if policy_net is None:\n",
-    "    policy_net, episode_rewards = train(torchdevice, para, 10)\n",
+    "    policy_net, episode_rewards = train(torchdevice, em, para, 10)\n",
     "    policy_net.save(modelfile)\n",
     "    plot_results(episode_rewards, para.n_episodes_ravg)"
    ]
@@ -814,7 +828,7 @@
    ],
    "source": [
     "# play\n",
-    "episode_rewards = play(torchdevice, policy_net, para.n_episodes_ravg, 5, 1000)"
+    "episode_rewards = play(torchdevice, em, policy_net, para.n_episodes_ravg, 5, 1000)"
    ]
   },
   {
