OpenAI_Gym_Cartpole_deepRL: plot_results: fixed output (no behavioural change)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -442,7 +442,7 @@
     "\n",
     "def plot_results(values, moving_avg_period):\n",
     "    episode_best = np.argmax(values)\n",
-    "    moving_avg_best = np.max(values)\n",
+    "    moving_avg_best = np.max(values).item()\n",
     "    print(\"best episode: \" + str(episode_best) + \" with reward \" + str(moving_avg_best))\n",
     "    plot(values, moving_avg_period)\n",
     "        \n",
