OpenAI_Gym_Cartpole_deepRL: train: improved search for best model
(see comments for details)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -642,13 +642,33 @@
     "                # statistics\n",
     "                episode_rewards.append(reward_sum)\n",
     "\n",
-    "                # save best model found so far\n",
+    "                #\n",
+    "                # Save the best performing model\n",
+    "                #\n",
+    "                # We observed, that the performance of the agent does not\n",
+    "                # converge. It's performance fluctuates strongly over the\n",
+    "                # training cycle. This means, that there is no guarantee,\n",
+    "                # that the model at the end of the training is the best\n",
+    "                # performing one.\n",
+    "                # Solution: We keep track of the best performing model\n",
+    "                # while in training.\n",
+    "                #\n",
+    "                # We save the model if these two conditions are met:\n",
+    "                # 1. If the model performed well in the last few \n",
+    "                #    episodes\n",
+    "                #    -> If the moving average of reward is better than\n",
+    "                #       what we have seen so far.\n",
+    "                # 2. To prevent saving a bad performing outlier: If the\n",
+    "                #    model performed well in the last episode\n",
+    "                #    -> If the last episodes reward is better or equal\n",
+    "                #       than the moving average\n",
+    "\n",
     "                moving_avg = get_moving_average(\n",
     "                    episode_rewards,\n",
     "                    para.n_episodes_ravg)[-1]\n",
-    "                if moving_avg > moving_avg_best:\n",
-    "                    print(\"\\nsave best episode: \" + str(episode_best) +\n",
-    "                          \" with reward \" + str(moving_avg_best));\n",
+    "                if moving_avg > moving_avg_best and reward_sum >= moving_avg_best:\n",
+    "                    print(\"\\nsave best: episode \" + str(episode_best) +\n",
+    "                          \" with average reward \" + str(moving_avg_best));\n",
     "                    if is_ipython: display.clear_output(wait=True)\n",
     "                    moving_avg_best = moving_avg\n",
     "                    episode_best = episode\n",
