OpenAI_Gym_Cartpole_deepRL: train: improved runtime output

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -667,12 +667,11 @@
     "                    episode_rewards,\n",
     "                    para.n_episodes_ravg)[-1]\n",
     "                if moving_avg > moving_avg_best and reward_sum >= moving_avg_best:\n",
-    "                    print(\"\\nsave best: episode \" + str(episode_best) +\n",
-    "                          \" with average reward \" + str(moving_avg_best));\n",
-    "                    if is_ipython: display.clear_output(wait=True)\n",
     "                    moving_avg_best = moving_avg\n",
     "                    episode_best = episode\n",
     "                    policy_net_best.load_state_dict(policy_net.state_dict())\n",
+    "                    print(\"\\nsave best: episode \" + str(episode_best) +\n",
+    "                          \" with average reward \" + str(moving_avg_best));\n",
     "\n",
     "                # update target_net\n",
     "                if episode % hpara.target_update == 0:\n",
@@ -680,7 +679,10 @@
     "    \n",
     "                # output statistics\n",
     "                if episode % stat_update == 0:\n",
-    "                    print('\\nepisode: ' + str(episode))\n",
+    "                    if is_ipython: display.clear_output(wait=True)\n",
+    "                    print('episode: ' + str(episode))\n",
+    "                    print(\"best: episode \" + str(episode_best) +\n",
+    "                          \" with average reward \" + str(moving_avg_best));\n",
     "                    plot(episode_rewards, para.n_episodes_ravg)\n",
     "                    print(str(episode) + \": \", end='')\n",
     "\n",
@@ -689,6 +691,9 @@
     "    em.close()\n",
     "\n",
     "    # return best policy and statistics\n",
+    "    print(\"best: episode \" + str(episode_best) +\n",
+    "          \" with average reward \" + str(moving_avg_best));\n",
+    "    \n",
     "    policy_net_best.eval() # only inference    \n",
     "    return (policy_net_best, episode_rewards)"
    ]
