OpenAI_Gym_Cartpole_deepRL: more runtime output improvement (keep plots, fixed episode counters, ...)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -435,15 +435,15 @@
     "    \n",
     "    moving_avg = get_moving_average(values, moving_avg_period)\n",
     "    plt.plot(moving_avg)\n",
-    "    plt.pause(1)\n",
-    "    print(\"Episode\", len(values), \"\\n\", \\\n",
-    "         moving_avg_period, \"episode moving avg:\", moving_avg[-1])\n",
-    "    if is_ipython: display.clear_output(wait=True)\n",
+    "    plt.pause(0.001)\n",
+    "    print(\"Episode \" + str(len(values)) + \n",
+    "          \" with average reward \" + str(moving_avg[-1]))\n",
     "\n",
     "def plot_results(values, moving_avg_period):\n",
     "    episode_best = np.argmax(values)\n",
     "    moving_avg_best = np.max(values).item()\n",
-    "    print(\"best episode: \" + str(episode_best) + \" with reward \" + str(moving_avg_best))\n",
+    "    print(\"Best episode: \" + str(episode_best) +\n",
+    "          \" with average reward \" + str(moving_avg_best))\n",
     "    plot(values, moving_avg_period)\n",
     "        \n",
     "def get_moving_average(values, period):\n",
@@ -597,7 +597,7 @@
     "    \n",
     "    # start training\n",
     "    print(\"0: \", end='')\n",
-    "    for episode in range(hpara.n_episodes):\n",
+    "    for episode in range(1, hpara.n_episodes + 1):\n",
     "\n",
     "        # start new episode\n",
     "        print(\".\", end='')\n",
@@ -670,7 +670,7 @@
     "                    moving_avg_best = moving_avg\n",
     "                    episode_best = episode\n",
     "                    policy_net_best.load_state_dict(policy_net.state_dict())\n",
-    "                    print(\"\\nsave best: episode \" + str(episode_best) +\n",
+    "                    print(\"\\nsave best: Episode \" + str(episode_best) +\n",
     "                          \" with average reward \" + str(moving_avg_best));\n",
     "\n",
     "                # update target_net\n",
@@ -680,10 +680,9 @@
     "                # output statistics\n",
     "                if episode % stat_update == 0:\n",
     "                    if is_ipython: display.clear_output(wait=True)\n",
-    "                    print('episode: ' + str(episode))\n",
-    "                    print(\"best: episode \" + str(episode_best) +\n",
-    "                          \" with average reward \" + str(moving_avg_best));\n",
     "                    plot(episode_rewards, para.n_episodes_ravg)\n",
+    "                    print(\"best: Episode \" + str(episode_best) +\n",
+    "                          \" with average reward \" + str(moving_avg_best));\n",
     "                    print(str(episode) + \": \", end='')\n",
     "\n",
     "                break\n",
@@ -691,9 +690,9 @@
     "    em.close()\n",
     "\n",
     "    # return best policy and statistics\n",
-    "    print(\"best: episode \" + str(episode_best) +\n",
-    "          \" with average reward \" + str(moving_avg_best));\n",
     "    \n",
+    "    print(\"best: Episode \" + str(episode_best) +\n",
+    "          \" with average reward \" + str(moving_avg_best));\n",
     "    policy_net_best.eval() # only inference    \n",
     "    return (policy_net_best, episode_rewards)"
    ]
@@ -729,9 +728,7 @@
     "    # track episode rewards\n",
     "    episode_rewards = []\n",
     "\n",
-    "    for episode in range(num_episodes):\n",
-    "\n",
-    "        print('episode: ' + str(episode))\n",
+    "    for episode in range(1, num_episodes + 1):\n",
     "\n",
     "        # start new episode\n",
     "        em.reset()\n",
@@ -752,6 +749,10 @@
     "            # end of episode?\n",
     "            if em.done or timestep >= max_timestep:\n",
     "                episode_rewards.append(reward_sum)\n",
+    "                if is_ipython: display.clear_output(wait=True)\n",
+    "                print(\"Episode \" + str(episode) +\n",
+    "                      \" with reward \" + str(reward_sum.item()));\n",
+    "\n",
     "                plot(episode_rewards, n_episodes_ravg)\n",
     "                break\n",
     "        \n",
