OpenAI_Gym_Cartpole_deepRL: fixed environment handling (close in main program)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -687,8 +687,6 @@
     "\n",
     "                break\n",
     "\n",
-    "    em.close()\n",
-    "\n",
     "    # return best policy and statistics\n",
     "    \n",
     "    print(\"best: Episode \" + str(episode_best) +\n",
@@ -756,7 +754,6 @@
     "                plot(episode_rewards, n_episodes_ravg)\n",
     "                break\n",
     "        \n",
-    "    em.close()\n",
     "    return episode_rewards"
    ]
   },
@@ -945,6 +942,16 @@
     "# print results of play\n",
     "if episode_rewards is not None:\n",
     "    plot_results(episode_rewards, para.n_episodes_ravg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8674f9c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "em.close()"
    ]
   }
  ],
