improved output (plots)

--- a/OpenAI_Gym_Cartpole_deepRL.ipynb
+++ b/OpenAI_Gym_Cartpole_deepRL.ipynb
@@ -428,7 +428,7 @@
     "def plot(values, moving_avg_period):\n",
     "    plt.figure(2)\n",
     "    plt.clf()\n",
-    "    plt.title('Training ...')\n",
+    "    plt.title('Performance ...')\n",
     "    plt.xlabel('Episode')\n",
     "    plt.ylabel('Reward')\n",
     "    plt.plot(values)\n",
@@ -442,8 +442,6 @@
     "def plot_results(values, moving_avg_period):\n",
     "    episode_best = np.argmax(values)\n",
     "    moving_avg_best = np.max(values).item()\n",
-    "    print(\"Best episode: \" + str(episode_best) +\n",
-    "          \" with average reward \" + str(moving_avg_best))\n",
     "    plot(values, moving_avg_period)\n",
     "        \n",
     "def get_moving_average(values, period):\n",
