--- a/OpenAI_Gym_LunarLander_deepRL.ipynb
+++ b/OpenAI_Gym_LunarLander_deepRL.ipynb
@@ -641,21 +641,22 @@
     "                episode_rewards.append(reward_sum)\n",
     "\n",
     "                #\n",
-    "                # Save the best performing model\n",
+    "                # Save the most recent, best performing model\n",
     "                #\n",
     "                # We observed, that the performance of the agent does not\n",
-    "                # converge. It's performance fluctuates strongly over the\n",
-    "                # training cycle. This means, that there is no guarantee,\n",
-    "                # that the model at the end of the training is the best\n",
-    "                # performing one.\n",
-    "                # Solution: We keep track of the best performing model\n",
-    "                # while in training.\n",
+    "                # converge in some cases. It's performance can fluctuate\n",
+    "                # strongly over the training cycle. This means, that there\n",
+    "                # is no guarantee, that the model at the end of the training\n",
+    "                # is the best performing one.\n",
+    "                # Solution: We keep track of the most recent, best performing\n",
+    "                # model while in training.\n",
     "                #\n",
     "                # We save the model if these two conditions are met:\n",
     "                # 1. If the model performed well in the last few \n",
     "                #    episodes\n",
-    "                #    -> If the moving average of reward is better than\n",
-    "                #       what we have seen so far.\n",
+    "                #    -> If the moving average of reward is equal or better\n",
+    "                #       than what we have seen so far. (equal because we\n",
+    "                #       want to save the most recent model)\n",
     "                # 2. To prevent saving a bad performing outlier: If the\n",
     "                #    model performed well in the last episode\n",
     "                #    -> If the last episodes reward is better or equal\n",
@@ -664,7 +665,10 @@
     "                moving_avg = get_moving_average(\n",
     "                    episode_rewards,\n",
     "                    para.n_episodes_ravg)[-1]\n",
-    "                if moving_avg > moving_avg_best and reward_sum >= moving_avg_best:\n",
+    "                if episode >= para.n_episodes_ravg and \\\n",
+    "                    moving_avg >= moving_avg_best and \\\n",
+    "                    reward_sum >= moving_avg_best:\n",
+    "                    \n",
     "                    moving_avg_best = moving_avg\n",
     "                    episode_best = episode\n",
     "                    policy_net_best.load_state_dict(policy_net.state_dict())\n",
